--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -1,13 +1,13 @@
-{% extends "base.html" %}
+{% extends "blog/base.html" %}
+{% block title %}{{ post.title }}{% endblock %}
 {% block content %}
-  <h1>{{ post.title }}</h1>
-  <p>{{ post.content }}</p>
-  <p><small>By {{ post.author }} on {{ post.published_date }}</small></p>
+<h2>{{ post.title }}</h2>
+<p>{{ post.content }}</p>
+<p><small>By {{ post.author.username }} on {{ post.published_date }}</small></p>
 
-  {% if user == post.author %}
-    <a href="{% url 'post_update' post.pk %}">Edit</a> | 
+{% if user == post.author %}
+    <a href="{% url 'post_update' post.pk %}">Edit</a> |
     <a href="{% url 'post_delete' post.pk %}">Delete</a>
-  {% endif %}
-
-  <a href="{% url 'post_list' %}">Back to posts</a>
+{% endif %}
+<a href="{% url 'post_list' %}">Back to Posts</a>
 {% endblock %}
