--- a/django_blog/blog/templates/blog/post_list.html
+++ b/django_blog/blog/templates/blog/post_list.html
@@ -1,15 +1,18 @@
-{% extends "base.html" %}
+{% extends "blog/base.html" %}
+{% block title %}All Posts{% endblock %}
 {% block content %}
-  <h1>All Blog Posts</h1>
-  <a href="{% url 'post_create' %}">+ New Post</a>
-  <ul>
+<h2>Blog Posts</h2>
+{% if user.is_authenticated %}
+    <a href="{% url 'post_create' %}">+ New Post</a>
+{% endif %}
+<ul>
     {% for post in posts %}
-      <li>
-        <a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a> 
-        by {{ post.author }}
-      </li>
+        <li>
+            <a href="{% url 'post_detail' post.pk %}">{{ post.title }}</a>
+            <p>{{ post.content|truncatewords:20 }}</p>
+        </li>
     {% empty %}
-      <li>No posts yet.</li>
+        <p>No posts yet.</p>
     {% endfor %}
-  </ul>
+</ul>
 {% endblock %}
