--- a/django_blog/blog/templates/blog/post_detail.html
+++ b/django_blog/blog/templates/blog/post_detail.html
@@ -6,6 +6,15 @@
 <p>{{ post.content }}</p>
 <p><small>By {{ post.author.username }} on {{ post.created_at }}</small></p>
 
+{% if post.tags.all %}
+  <p>Tags:
+    {% for tag in post.tags.all %}
+      <a href="{% url 'posts_by_tag' tag.name %}">{{ tag.name }}</a>{% if not forloop.last %}, {% endif %}
+    {% endfor %}
+  </p>
+{% endif %}
+
+
 {% if user.is_authenticated and user == post.author %}
   <a href="{% url 'post_update' post.pk %}">Edit</a> |
   <a href="{% url 'post_delete' post.pk %}">Delete</a>
@@ -43,3 +52,4 @@
 
 <p><a href="{% url 'post_list' %}">← Back to posts</a></p>
 {% endblock %}
+
