--- a/django_blog/blog/templates/blog/post_list_items.html
+++ b/django_blog/blog/templates/blog/post_list_items.html
@@ -8,8 +8,17 @@
       <a href="{% url 'post_update' post.pk %}">Edit</a> |
       <a href="{% url 'post_delete' post.pk %}">Delete</a>
     {% endif %}
+    <p>
+      Tags:
+      {% for tag in post.tags.all %}
+        <a href="{% url 'posts-by-tag' tag.slug %}">{{ tag.name }}</a>
+      {% empty %}
+        No tags
+      {% endfor %}
+    </p>
   </article>
   <hr>
 {% empty %}
   <p>No posts yet.</p>
 {% endfor %}
+
